# router-lib

./: .gitignore  CMakeLists.txt  README.md  route.json
apps/: sailroute.cpp
benchmarks/: benchmark_main.cpp
cmake/: ExpectCommandFailure.cmake  sailrouteConfig.cmake.in
examples/: basic.cpp
include/sailroute/: contours.hpp  error.hpp  polar.hpp  router.hpp  sailroute.hpp  serialization.hpp  time.hpp  types.hpp  weather.hpp
samples/: coordinates.txt  sample.grib  sample.pol
src/: error.cpp  time.cpp
src/polar/: vessel_polar.cpp
src/routing/: contours.cpp  contours.hpp  geodesy.cpp  geodesy.hpp  intervals.cpp  intervals.hpp  router.cpp
src/serialization/: gpx.cpp  isochrones.cpp  json.cpp  numeric_encoding.hpp  text_encoding.hpp
src/weather/: weather_dataset.cpp
tests/: test_contours.cpp  test_main.cpp  test_polar.cpp  test_routing.cpp  test_serialization.cpp  test_support.hpp  test_time.cpp  test_weather.cpp
